--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <div class=" container max-w-[1128px] px-3 mx-auto ">
                           <div class=" flex items-center justify-between">
                               <img class="w-[134px] h-[55px]" src="./assets/images/navLogo.png" alt="Navlogo">
-                              <button class=" duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_20px_10px_32px] bg-lightGreen rounded-[30px] ff-phudu"><span class=" text-darkGreen  font-semibold uppercase">Coming soon</span><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <button class=" border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_20px_10px_32px] bg-lightGreen rounded-[30px] ff-phudu"><span class=" text-darkGreen  font-semibold uppercase">Coming soon</span><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M22.5878 12.8019L15.4114 15.4114L12.8019 22.5878C12.741 22.752 12.6313 22.8935 12.4876 22.9935C12.3438 23.0935 12.1729 23.1471 11.9979 23.1471C11.8228 23.1471 11.6519 23.0935 11.5082 22.9935C11.3644 22.8935 11.2547 22.752 11.1938 22.5878L8.58866 15.4114L1.41217 12.8019C1.24804 12.741 1.10648 12.6313 1.00651 12.4876C0.906548 12.3438 0.852966 12.1729 0.852966 11.9979C0.852966 11.8228 0.906548 11.6519 1.00651 11.5082C1.10648 11.3644 1.24804 11.2547 1.41217 11.1938L8.58866 8.58866L11.1981 1.41217C11.259 1.24804 11.3687 1.10648 11.5125 1.00651C11.6562 0.906548 11.8271 0.852966 12.0022 0.852966C12.1772 0.852966 12.3481 0.906548 12.4919 1.00651C12.6356 1.10648 12.7453 1.24804 12.8062 1.41217L15.4156 8.58866L22.5921 11.1981C22.7547 11.2603 22.8945 11.3704 22.993 11.5139C23.0915 11.6574 23.144 11.8275 23.1435 12.0015C23.143 12.1755 23.0896 12.3453 22.9904 12.4883C22.8911 12.6312 22.7507 12.7406 22.5878 12.8019Z" fill="#E5F6EC"/>
                                   <path d="M22.8816 10.3919L16.0803 7.91967L13.6081 1.11842C13.4863 0.790143 13.2669 0.507024 12.9794 0.307093C12.6919 0.107163 12.3502 0 12 0C11.6498 0 11.3081 0.107163 11.0206 0.307093C10.7331 0.507024 10.5137 0.790143 10.3919 1.11842L7.91967 7.91967L1.11842 10.3919C0.790143 10.5137 0.507024 10.7331 0.307093 11.0206C0.107163 11.3081 0 11.6498 0 12C0 12.3502 0.107163 12.6919 0.307093 12.9794C0.507024 13.2669 0.790143 13.4863 1.11842 13.6081L7.91967 16.0814L10.3919 22.8816C10.5137 23.2099 10.7331 23.493 11.0206 23.6929C11.3081 23.8928 11.6498 24 12 24C12.3502 24 12.6919 23.8928 12.9794 23.6929C13.2669 23.493 13.4863 23.2099 13.6081 22.8816L16.0814 16.0803L22.8816 13.6081C23.2099 13.4863 23.493 13.2669 23.6929 12.9794C23.8928 12.6919 24 12.3502 24 12C24 11.6498 23.8928 11.3081 23.6929 11.0206C23.493 10.7331 23.2099 10.5137 22.8816 10.3919ZM15.1176 14.6051C15 14.648 14.8931 14.7161 14.8046 14.8046C14.7161 14.8931 14.648 15 14.6051 15.1176L12 22.2812L9.39485 15.1176C9.35202 15 9.28394 14.8931 9.19541 14.8046C9.10688 14.7161 9.00004 14.648 8.8824 14.6051L1.71878 12L8.8824 9.39485C9.00004 9.35202 9.10688 9.28394 9.19541 9.19541C9.28394 9.10688 9.35202 9.00004 9.39485 8.8824L12 1.71878L14.6051 8.8824C14.648 9.00004 14.7161 9.10688 14.8046 9.19541C14.8931 9.28394 15 9.35202 15.1176 9.39485L22.2812 12L15.1176 14.6051Z" fill="#00434F"/>
                                   </svg>
@@ -97,7 +97,7 @@
                     </span>
                     <div class=" hidden md:block">
                     <button
-                      class=" duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey ff-phudu font-semibold text-[20px] leading-[20px] text-darkgreen flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow"
+                      class=" border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey ff-phudu font-semibold text-[20px] leading-[20px] text-darkgreen flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow"
                     >
                       subscribe for more
                       <span
@@ -152,7 +152,7 @@
               </p>
               <div class="md:hidden mt-[32px]">
               <button
-              class="ff-phudu duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey font-semibold text-[20px] leading-[20px] text-darkgreen text flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow"
+              class="ff-phudu border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey font-semibold text-[20px] leading-[20px] text-darkgreen text flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow"
             >
               subscribe for more
               <span
@@ -201,7 +201,7 @@
                 
                 <div class=" flex justify-between items-center pt-[40px]">
                   <p class=" poppins font-normal text-sm text-gray ">Make your sales teams superhuman.<span class=" lg:block">Launching soon. Sign up for updates..</span></p>
-                  <button class=" duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_32px_10px_32px] bg-yellow font-semibold text-xl rounded-[30px] ff-phudu">Submit</button>
+                  <button class=" border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_32px_10px_32px] bg-yellow font-semibold text-xl rounded-[30px] ff-phudu">Submit</button>
                 </div>
                 </div>
                 <div class="bg-greenGradient rounded-[32px] relative w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
