--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class=" pt-[33px] md:pt-[51px] pb-[57px] md:pb-[127px]">
                   <div class=" container max-w-[1128px] px-3 mx-auto ">
                           <div class=" flex items-center justify-between">
-                              <img class="w-[134px] h-[55px]" src="./assets/images/navLogo.png" alt="Navlogo">
+                              <img class="sm:w-[134px] w-[100] h-[42px] sm:h-[55px]" src="./assets/images/navLogo.png" alt="Navlogo">
                               <button class=" border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_20px_10px_32px] bg-lightGreen rounded-[30px] ff-phudu"><span class=" text-darkGreen  font-semibold uppercase">Coming soon</span><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M22.5878 12.8019L15.4114 15.4114L12.8019 22.5878C12.741 22.752 12.6313 22.8935 12.4876 22.9935C12.3438 23.0935 12.1729 23.1471 11.9979 23.1471C11.8228 23.1471 11.6519 23.0935 11.5082 22.9935C11.3644 22.8935 11.2547 22.752 11.1938 22.5878L8.58866 15.4114L1.41217 12.8019C1.24804 12.741 1.10648 12.6313 1.00651 12.4876C0.906548 12.3438 0.852966 12.1729 0.852966 11.9979C0.852966 11.8228 0.906548 11.6519 1.00651 11.5082C1.10648 11.3644 1.24804 11.2547 1.41217 11.1938L8.58866 8.58866L11.1981 1.41217C11.259 1.24804 11.3687 1.10648 11.5125 1.00651C11.6562 0.906548 11.8271 0.852966 12.0022 0.852966C12.1772 0.852966 12.3481 0.906548 12.4919 1.00651C12.6356 1.10648 12.7453 1.24804 12.8062 1.41217L15.4156 8.58866L22.5921 11.1981C22.7547 11.2603 22.8945 11.3704 22.993 11.5139C23.0915 11.6574 23.144 11.8275 23.1435 12.0015C23.143 12.1755 23.0896 12.3453 22.9904 12.4883C22.8911 12.6312 22.7507 12.7406 22.5878 12.8019Z" fill="#E5F6EC"/>
                                   <path d="M22.8816 10.3919L16.0803 7.91967L13.6081 1.11842C13.4863 0.790143 13.2669 0.507024 12.9794 0.307093C12.6919 0.107163 12.3502 0 12 0C11.6498 0 11.3081 0.107163 11.0206 0.307093C10.7331 0.507024 10.5137 0.790143 10.3919 1.11842L7.91967 7.91967L1.11842 10.3919C0.790143 10.5137 0.507024 10.7331 0.307093 11.0206C0.107163 11.3081 0 11.6498 0 12C0 12.3502 0.107163 12.6919 0.307093 12.9794C0.507024 13.2669 0.790143 13.4863 1.11842 13.6081L7.91967 16.0814L10.3919 22.8816C10.5137 23.2099 10.7331 23.493 11.0206 23.6929C11.3081 23.8928 11.6498 24 12 24C12.3502 24 12.6919 23.8928 12.9794 23.6929C13.2669 23.493 13.4863 23.2099 13.6081 22.8816L16.0814 16.0803L22.8816 13.6081C23.2099 13.4863 23.493 13.2669 23.6929 12.9794C23.8928 12.6919 24 12.3502 24 12C24 11.6498 23.8928 11.3081 23.6929 11.0206C23.493 10.7331 23.2099 10.5137 22.8816 10.3919ZM15.1176 14.6051C15 14.648 14.8931 14.7161 14.8046 14.8046C14.7161 14.8931 14.648 15 14.6051 15.1176L12 22.2812L9.39485 15.1176C9.35202 15 9.28394 14.8931 9.19541 14.8046C9.10688 14.7161 9.00004 14.648 8.8824 14.6051L1.71878 12L8.8824 9.39485C9.00004 9.35202 9.10688 9.28394 9.19541 9.19541C9.28394 9.10688 9.35202 9.00004 9.39485 8.8824L12 1.71878L14.6051 8.8824C14.648 9.00004 14.7161 9.10688 14.8046 9.19541C14.8931 9.28394 15 9.35202 15.1176 9.39485L22.2812 12L15.1176 14.6051Z" fill="#00434F"/>
@@ -49,11 +49,11 @@
                           </div>
                   </div>
             </div>
-            <div class="flex grow justify-end items-end pb-[72px]">
+            <div class="flex grow justify-end items-end pb-[72px] pt-[56px]">
               <div class="container px-3 mx-auto max-w-[1128px]">
                 <div class="flex items-end gap-5">
                   <h1
-                    class="ff-phudu text font-bold text-[96px] md:text-[110px] lg:text-[170px] leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
+                    class="ff-phudu text font-bold text-[90px] sm:text-[96px] md:text-[110px] lg:text-[170px] leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
                   >
                     THE
                   </h1>
@@ -67,7 +67,7 @@
               />
             </div>
                   <p
-                    class="poppins text font-normal text-[18px] leading-[24px] hidden md:block text-grey max-w-[268px]"
+                    class="poppins text font-normal text-[18px] leading-[24px] hidden md:block text-grey max-w-[268px] mb-[10px]"
                   >
                     Supercharge your conversion rates and
                     <span class="font-semibold text-lightGreen">save up to 34%</span>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="flex items-end">
                   <h2
-                    class="ff-phudu font-bold text text-[96px] md:text-[110px] lg:text-[170px] flex items-center gap-3 leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
+                    class="ff-phudu font-bold text text-[90px] sm:text-[96px] md:text-[110px] lg:text-[170px] flex items-center gap-3 leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
                   >
                     SALES
                     <span
@@ -138,7 +138,7 @@
               </div>
                   
                   <p
-                    class="ff-phudu font-bold text-[96px] md:text-[110px] lg:text-[170px] text leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
+                    class="ff-phudu font-bold text-[90px] sm:text-[96px] md:text-[110px] lg:text-[170px] text leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen"
                   >
                     CO-PILOT
                   </p>
@@ -181,13 +181,12 @@
           </div>
               </div>
             </div>
-          </div>
-   
+          </div>   
         </div>
           <section class="mb-[32px]">
-            <div class=" px-[32px]">
+            <div class="px-3 sm:px-[32px]">
               <div class=" grid lg:grid-cols-2 gap-4">
-                <div class=" bg-skyBlue1 p-[48px_24px] lg:p-[127px_110px_138px_110px] w-full max-w-[676px] rounded-[32px] h-[380px] lg:h-[561px] mx-auto">
+                <div class=" bg-skyBlue1 p-[48px_15px] sm:p-[48px_24px] lg:p-[127px_110px_138px_110px] w-full max-w-[676px] rounded-[32px] sm:h-[380px] lg:h-[561px] mx-auto">
                   <h2 class="uppercase text-center ff-phudu text-lightGrey text-[32px] md:text-5xl font-bold pb-[28px] md:pb-[40px]">subscribe for more</h2>
                 <div class=" mb-4 md:mb-[20px]">
                   <label for="html">
@@ -200,19 +199,20 @@
                   </label>
                 
                 <div class=" flex justify-between items-center pt-[40px]">
-                  <p class=" poppins font-normal text-sm text-gray ">Make your sales teams superhuman.<span class=" lg:block">Launching soon. Sign up for updates..</span></p>
+                  <p class=" poppins font-normal text-sm text-gray sm:block hidden ">Make your sales teams superhuman.<span class=" lg:block">Launching soon. Sign up for updates..</span></p>
+                  <p class=" poppins font-normal text-sm text-gray sm:hidden max-sm:max-w-[184px]">Lorem ipsum dolor sit amet cons. Augue odio sit scelerisque viverra.</p>
                   <button class=" border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey flex gap-2 p-[10px_32px_10px_32px] bg-yellow font-semibold text-xl rounded-[30px] ff-phudu">Submit</button>
                 </div>
                 </div>
                 <div class="bg-greenGradient rounded-[32px] relative w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
                   <div class="rounded-[100px] p-[18px_29px_24px_30px] lg:p-[39px_59px_46px_56px] bg-skyBlue absolute top-[7%] lg:left-[-9%] left-[-3%]">
-                    <p class="uppercase ff-phudu font-bold text-[48px] lg:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white">Soar quickly</p>
+                    <p class="uppercase ff-phudu font-bold text-[45px] max-sm:text-[45px] text-[53px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white">Soar quickly</p>
                   </div>
                   <div class="rounded-[100px]  p-[19px_26px_23px_25px] lg:p-[40px_56px_45px_56px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10">
-                    <p class="uppercase ff-phudu font-bold text-[48px] lg:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white ">with our</p>
+                    <p class="uppercase ff-phudu font-bold text-[45px] max-sm:text-[45px] text-[53px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white ">with our</p>
                   </div>
                   <div class="rounded-[100px] p-[19px_32px_23px_29px] lg:p-[38px_60px_47px_65px] bg-yellow absolute bottom-[7%] left-[5%]">
-                    <p class="uppercase ff-phudu font-bold text-[48px] lg:text-[80px] text-white leading-[48px] lg:leading-[80px] flex items-center gap-1"> <span><svg class=" w-[48px] md:w-[61px] h-[38px] md:h-[56px]" width="61" height="56" viewBox="0 0 61 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <p class="uppercase ff-phudu font-bold text-[45px] max-sm:text-[45px] text-[53px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] flex items-center gap-1"> <span><svg class=" w-[48px] md:w-[61px] h-[38px] md:h-[56px]" width="61" height="56" viewBox="0 0 61 56" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M0 54V56H11.3847L13.1625 35.4061C13.4702 29.5777 17.8804 24.3487 25.3676 25.2924L30.1539 18.1539V56H30.32H43.52V54L32.4 0.0799983L11.12 0L0 54ZM60.1369 0H47.4969V56H60.1369V0ZM18.2565 33.0636C18.2565 34.7733 19.6696 36.15 21.4702 36.15C23.2138 36.15 24.6269 34.8066 24.6269 33.0636C24.6269 31.3207 23.2707 29.9329 21.4702 29.9329C19.6696 29.9329 18.2565 31.354 18.2565 33.0636Z" fill="white"/>
                       </svg>
                       </span> co-pilot</p>
@@ -249,7 +249,7 @@
                             <path d="M46.2846 36.3965L43.7816 46.2847M50.3943 40.9441L49.56 44.2401M36.3965 33.8935L33.8935 43.7816M30.6181 35.938L29.7838 39.2341M42.1749 31.849L38.0032 48.3292" stroke="#00434F" stroke-width="2.5" stroke-linecap="round"/>
                             </svg>
                             </a>
-                            <a class="absolute right-0 bottom-[30%]" href=""><svg class="w-[37px] lg:w-[161px] h-[37px] lg:h-[165px]"  viewBox="0 0 161 165" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a class="absolute right-0 bottom-[30%]" href=""><svg class="w-[75px] lg:w-[161px] h-[165px] max-sm:h-[90px]"  viewBox="0 0 161 165" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <g clip-path="url(#clip0_295_51)">
                               <rect width="443" height="165" rx="82.5" fill="#F78682"/>
                               </g>
@@ -264,17 +264,18 @@
               </div>
             </div>
           </section>
-          <footer class="bg-whiteGradient">
+           <footer class="bg-whiteGradient">
             <div class="container mx-auto max-w-[1128px] pt-[32px] md:pt-[55px] pb-[40px] md:pb-[54px]">
               <div class=" grid md:grid-cols-2 lg:grid-cols-3">
-                <div class=" flex items-center justify-center lg:justify-start pb-4 ">
+                <div class=" flex items-center justify-center lg:justify-start lg:justify-start pb-4 ">
                   <img class=" cursor-pointer" src="./assets/images/footer-logo.png" alt="footer-logo">
-                  <p class="poppins font-normal text-sm text-grey ml-[14px]">Make your sales teams superhuman.<span class=" block">Chirp. The Sales AI Co-Pilot.</span></p>
+                  <p class="poppins font-normal text-sm text-grey ml-[14px] hidden lg:block">Make your sales teams superhuman.<span class=" block">Chirp. The Sales AI Co-Pilot.</span></p>
+                  <p class="poppins font-normal text-sm text-grey ml-[14px] block lg:hidden max-w-[288px]">Lorem ipsum dolor sit amet consectetur. Augue odio sit scelerisque viverra.</p>
                 </div>
                 <div class=" flex items-center justify-center  order-3 lg:order-2">
                   <p class=" poppins font-normal text-sm text-grey">© 2024 Chirp Labs. All rights reserved.</p>
                 </div>
-                <div class=" flex items-center justify-center pb-4 lg:pb-0 gap-[18px] order-2 lg:order-3">
+                <div class=" flex items-center justify-center lg:justify-end pb-4 lg:pb-0 gap-[18px] order-2 lg:order-3">
                   <a class=" duration-300 hover:scale-110" href="https://in.linkedin.com/" target="_blank"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M25.3333 4C26.0406 4 26.7189 4.28095 27.219 4.78105C27.719 5.28115 28 5.95942 28 6.66667V25.3333C28 26.0406 27.719 26.7189 27.219 27.219C26.7189 27.719 26.0406 28 25.3333 28H6.66667C5.95942 28 5.28115 27.719 4.78105 27.219C4.28095 26.7189 4 26.0406 4 25.3333V6.66667C4 5.95942 4.28095 5.28115 4.78105 4.78105C5.28115 4.28095 5.95942 4 6.66667 4H25.3333ZM24.6667 24.6667V17.6C24.6667 16.4472 24.2087 15.3416 23.3936 14.5264C22.5784 13.7113 21.4728 13.2533 20.32 13.2533C19.1867 13.2533 17.8667 13.9467 17.2267 14.9867V13.5067H13.5067V24.6667H17.2267V18.0933C17.2267 17.0667 18.0533 16.2267 19.08 16.2267C19.5751 16.2267 20.0499 16.4233 20.3999 16.7734C20.75 17.1235 20.9467 17.5983 20.9467 18.0933V24.6667H24.6667ZM9.17333 11.4133C9.76742 11.4133 10.3372 11.1773 10.7573 10.7573C11.1773 10.3372 11.4133 9.76742 11.4133 9.17333C11.4133 7.93333 10.4133 6.92 9.17333 6.92C8.57571 6.92 8.00257 7.1574 7.57999 7.57999C7.1574 8.00257 6.92 8.57571 6.92 9.17333C6.92 10.4133 7.93333 11.4133 9.17333 11.4133ZM11.0267 24.6667V13.5067H7.33333V24.6667H11.0267Z" fill="#00434F"/>
                     </svg>
@@ -296,6 +297,6 @@
 
               </div>
             </div>
-          </footer>
+          </footer> 
 </body>
 </html>
