--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <section class="mb-[32px]">
             <div class="px-3 sm:px-[32px]">
               <div class=" grid lg:grid-cols-2 gap-4">
-                <div class=" bg-skyBlue1 p-[48px_15px] sm:p-[48px_24px] lg:p-[127px_110px_138px_110px] w-full max-w-[676px] rounded-[32px] sm:h-[380px] lg:h-[561px] mx-auto">
+                <div class=" bg-skyBlue1 p-[48px_15px] max-lg:p-[48px_24px] max-xl:p-[85px_85px_85px_70px] xl:p-[127px_110px_138px_110px] w-full max-w-[676px] rounded-[32px] sm:h-[380px] lg:h-[561px] mx-auto">
                   <h2 class="uppercase text-center ff-phudu text-lightGrey text-[32px] md:text-5xl font-bold pb-[28px] md:pb-[40px]">subscribe for more</h2>
                 <div class=" mb-4 md:mb-[20px]">
                   <label for="html">
