--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </h2>
         </div>
-        <div class="flex items-end md:pt-4 ">
+        <div class="flex items-end md:pt-4 gap-6 ">
           <div
             class="w-[219px] hidden md:block h-[118px] rounded-[129px] bg-lightGreen text relative translate-y-[-20px]">
             <img class="absolute bottom-[0%] left-[11%] text w-[155px] lg:w-[164px] h-[175px] lg:h-[210px]"
