--- a/index.html
+++ b/index.html
@@ -316,10 +316,29 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
   
   <script>
     document.getElementById("currentYear").innerText =
         new Date().getFullYear();
+
+        function handleScrollAnimations() {
+    const sections = document.querySelectorAll('.animate-section');
+
+    sections.forEach(section => {
+      const sectionTop = section.getBoundingClientRect().top;
+      const windowHeight = window.innerHeight;
+
+      if (sectionTop < windowHeight * 0.8) {
+        gsap.fromTo(section, { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 1, ease: "power2.out" });
+      }
+    });
+  }
+
+  gsap.from(".text", { opacity: 0, y: 100, duration: 1, delay: 0.5, stagger: 0.2, ease: "bounce.out" });
+  gsap.from(".bg-lightgreen", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 0.2 });
+  gsap.from(".bg-lightgreen", {  duration: 2, delay: 2, ease: "bounce.in" });
+  gsap.from(".bg-skyblue1", {  duration: 3, delay: 3, ease: "bounce.in" });
   </script>
   
 </body>
