--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="bg-greenGradient rounded-[32px] relative w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
-          <div 
+          <div
             class="rounded-[100px] p-[18px_29px_24px_30px] lg:p-[39px_59px_46px_56px] bg-skyBlue absolute top-[7%] lg:left-[-8%] left-[-3%]">
             <p
               class="uppercase ff-phudu font-bold text-[45px] max-sm:text-[45px] text-[53px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white">
@@ -192,7 +192,8 @@
                     d="M0 54V56H11.3847L13.1625 35.4061C13.4702 29.5777 17.8804 24.3487 25.3676 25.2924L30.1539 18.1539V56H30.32H43.52V54L32.4 0.0799983L11.12 0L0 54ZM60.1369 0H47.4969V56H60.1369V0ZM18.2565 33.0636C18.2565 34.7733 19.6696 36.15 21.4702 36.15C23.2138 36.15 24.6269 34.8066 24.6269 33.0636C24.6269 31.3207 23.2707 29.9329 21.4702 29.9329C19.6696 29.9329 18.2565 31.354 18.2565 33.0636Z"
                     fill="white" />
                 </svg>
-              </span> co-pilot</p>
+              </span> co-pilot
+            </p>
           </div>
           <a class="absolute top-[4%] right-[12%]" href=""><svg class="w-[37px] lg:w-[82px] h-[37px] lg:h-[82px]"
               viewBox="0 0 82 82" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -281,7 +282,8 @@
             amet consectetur. Augue odio sit scelerisque viverra.</p>
         </div>
         <div class=" flex items-center justify-center  order-3 lg:order-2">
-          <p class=" poppins font-normal text-sm text-grey">© <span id="currentYear"></span> Chirp Labs. All rights reserved.</p>
+          <p class=" poppins font-normal text-sm text-grey">© <span id="currentYear"></span> Chirp Labs.
+            All rights reserved.</p>
         </div>
         <div class=" flex items-center justify-center lg:justify-end pb-4 lg:pb-0 gap-[18px] order-2 lg:order-3">
           <a class=" duration-300 hover:scale-110" href="https://in.linkedin.com/" target="_blank"><svg width="32"
@@ -317,30 +319,30 @@
     </div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
-  
+
   <script>
     document.getElementById("currentYear").innerText =
-        new Date().getFullYear();
+      new Date().getFullYear();
 
-        function handleScrollAnimations() {
-    const sections = document.querySelectorAll('.animate-section');
+    function handleScrollAnimations() {
+      const sections = document.querySelectorAll('.animate-section');
 
-    sections.forEach(section => {
-      const sectionTop = section.getBoundingClientRect().top;
-      const windowHeight = window.innerHeight;
+      sections.forEach(section => {
+        const sectionTop = section.getBoundingClientRect().top;
+        const windowHeight = window.innerHeight;
 
-      if (sectionTop < windowHeight * 0.8) {
-        gsap.fromTo(section, { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 1, ease: "power2.out" });
-      }
-    });
-  }
+        if (sectionTop < windowHeight * 0.8) {
+          gsap.fromTo(section, { opacity: 0, y: 50 }, { opacity: 1, y: 0, duration: 1, ease: "power2.out" });
+        }
+      });
+    }
 
-  gsap.from(".text", { opacity: 0, y: 100, duration: 1, delay: 0.5, stagger: 0.2, ease: "bounce.out" });
-  gsap.from(".bg-lightgreen", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 0.2 });
-  gsap.from(".bg-lightgreen", {  duration: 2, delay: 2, ease: "bounce.in" });
-  gsap.from(".bg-skyblue1", {  duration: 3, delay: 3, ease: "bounce.in" });
+    gsap.from(".text", { opacity: 0, y: 100, duration: 1, delay: 0.5, stagger: 0.2, ease: "bounce.out" });
+    gsap.from(".bg-lightgreen", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 0.2 });
+    gsap.from(".bg-lightgreen", { duration: 2, delay: 2, ease: "bounce.in" });
+    gsap.from(".bg-skyblue1", { duration: 3, delay: 3, ease: "bounce.in" });
   </script>
-  
+
 </body>
 
 </html>
