--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
     </div>
-    <div class="flex grow justify-end items-end pb-[72px] pt-[56px]">
+    <div class="flex grow justify-end items-end pb-[72px] max-sm:pt-[56px]">
       <div class="container px-3 mx-auto max-w-[1128px]">
         <div class="flex items-end gap-10">
           <h1
@@ -195,7 +195,7 @@
               </span> co-pilot
             </p>
           </div>
-          <a class="absolute top-[4%] right-[12%]" href=""><svg class="w-[37px] lg:w-[82px] h-[37px] lg:h-[82px]"
+          <a class="absolute top-[4%] right-[12%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 82 82" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="17.6707" width="66" height="66" rx="33" transform="rotate(15.5296 17.6707 0)" fill="#FFCA4C" />
               <path
@@ -208,7 +208,7 @@
                 stroke="#8F5E00" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class=" absolute top-[25%] right-[7%] z-10" href=""><svg class="w-[37px] lg:w-[69px] h-[37px] lg:h-[69px]"
+          <a class=" absolute top-[25%] right-[7%] z-10" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect y="2.61902" width="66" height="66" rx="33" transform="rotate(-2.2742 0 2.61902)" fill="#6ACD7A" />
               <path
@@ -222,7 +222,7 @@
                 stroke="#005F26" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class=" absolute top-[30%] left-[7%]" href=""><svg class="w-[37px] lg:w-[78px] h-[37px] lg:h-[78px]"
+          <a class=" absolute top-[30%] left-[7%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 78 78" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="12.2637" width="66" height="66" rx="33" transform="rotate(10.7085 12.2637 0)" fill="#FDEBEB" />
               <path
@@ -233,7 +233,7 @@
                 fill="#94100C" />
             </svg>
           </a>
-          <a class=" absolute top-[47%] left-[18%]" href=""><svg class="w-[37px] lg:w-[74px] h-[37px] lg:h-[74px]"
+          <a class=" absolute top-[47%] left-[18%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect y="7.49695" width="66" height="66" rx="33" transform="rotate(-6.52231 0 7.49695)" fill="#6DC8D9" />
               <path
@@ -244,7 +244,7 @@
                 stroke="#00434F" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class="absolute bottom-[7%] right-[5%]" href=""><svg class="w-[37px] lg:w-[81px] h-[37px] lg:h-[81px]"
+          <a class="absolute bottom-[7%] right-[5%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 81 81" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="16.1962" width="66" height="66" rx="33" transform="rotate(14.2052 16.1962 0)" fill="#E5F6EC" />
               <path
