--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img class="sm:w-[134px] w-[100] h-[42px] sm:h-[55px] cursor-pointer" src="./assets/images/navLogo.png"
             alt="Navlogo">
           <button
-            class="p-[7px_19px_10px_30px] relative overflow-hidden btn hover:bg-white duration-300 md:w-[200px] w-[174px] h-[44px] z-30 flex items-center justify-end hover:border-2 hover:border-solid hover:border-darkGreen border border-transperent uppercase bg-lightGreen rounded-[30px] text-darkGreen gap-2 leading-[20px] relative font-semibold ff-phudu  md:text-[20px] text-[15px]">
+            class="p-[7px_19px_10px_30px] relative overflow-hidden btn hover:bg-white duration-300 md:w-[200px] w-[174px] h-[44px] z-30 flex items-center justify-end hover:border-2 hover:border-solid hover:border-darkGreen border border-transperent uppercase bg-lightGreen rounded-[30px]  gap-2  relative  ff-phudu">
             <span class="ps-2">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -58,10 +58,10 @@
                   fill="#00434F" />
               </svg>
             </span>
-            <span class=" absolute duration-300 w-[85%] btn-one top-[48%] left-[0] translate-y-[-50%] ff-phudu">
+            <span class=" absolute duration-300 w-[85%] btn-one top-[48%] left-[0] translate-y-[-50%] ff-phudu  text-[20px] font-semibold leading-[20px] text-darkGreen">
               Coming soon
             </span>
-            <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[0] translate-y-[-50%] ff-phudu ">
+            <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[0] translate-y-[-50%] ff-phudu text-[20px] font-semibold leading-[20px] text-darkGreen">
               Coming soon
             </span>
           </button>
@@ -111,10 +111,10 @@
                         fill="#FFCA4C" />
                     </svg>
                   </span>
-                  <span class=" absolute duration-300 w-[85%] btn-one top-[45%] left-[0] translate-y-[-50%] ff-phudu ">
+                  <span class=" absolute duration-300 w-[85%] btn-one top-[45%] left-[0] translate-y-[-50%] ff-phudu text-[20px]  font-semibold leading-[20px] text-darkGreen ">
                     subscribe for more
                   </span>
-                  <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[0] translate-y-[-50%] ff-phudu ">
+                  <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[0] translate-y-[-50%] ff-phudu text-[20px]  font-semibold leading-[20px] text-darkGreen ">
                     subscribe for more
                   </span>
                 </button>
@@ -167,14 +167,14 @@
           <form id="subscriptionForm" onsubmit="return validateForm()">
             <div class="mb-4 md:mb-[20px]">
               <label for="name">
-                <input type="text" id="name"
+                <input required type="text" id="name"
                   class="border border-solid focus:border-lightGrey placeholder:focus:font-semibold focus:outline-lightGray w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-black placeholder:poppins poppins font-normal placeholder:text-base text-base font-normal"
                   placeholder="Your Name">
               </label>
             </div>
 
             <label for="email">
-              <input type="email" id="email"
+              <input required type="email" id="email"
                 class="border border-solid focus:border-lightGrey focus:outline-lightGray placeholder:focus:font-semibold w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-black placeholder:poppins poppins placeholder:font-normal placeholder:text-base text-base font-normal"
                 placeholder="Your Email">
             </label>
@@ -187,10 +187,10 @@
                 <button id="submitBtn"
                 class="sm:py-[10px] mt-3 ff-phudu mt-0 btn mx-auto sm:mx-0 flex items-center justify-center sm:w-[124px] w-full h-[40px] py-[2px] sm:px-[32px] px-[17px] z-30 hover:bg-white hover:border hover:border-darkGreen text-darkGreen border-transparent uppercase bg-yellow rounded-[30px] font-semibold ff-phudu relative overflow-hidden sm:text-[20px] text-[16px] sm:leading-[20px] leading-[10px]"
                 type="submit">
-                <span class=" absolute duration-300 w-[85%] btn-one top-[45%] left-[7%] translate-y-[-50%] ">
+                <span class=" absolute duration-300 w-[85%] btn-one top-[45%] left-[7%] translate-y-[-50%] ff-phudu  md:text-[20px] text-[15px] font-semibold leading-[20px] text-darkGreen ">
                   Submit
                 </span>
-                <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[7%] translate-y-[-50%] ">
+                <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[7%] translate-y-[-50%] ff-phudu  md:text-[20px] text-[15px] font-semibold leading-[20px] text-darkGreen ">
                   Submit
                 </span> 
                 <span class="absolute inset-0 flex items-center justify-center transition-transform transform translate-y-full bg-white rounded-md hover:scale-[300] duration-700 z-[-20]"></span>
@@ -209,7 +209,7 @@
           </div>
           <div data-tilt>
             <div id="tilt-button2"
-              class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_26px] xl:p-[40px_56px_45px_56px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10 backdrop-blur-lg btn2">
+              class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_26px] xl:p-[40px_56px_45px_56px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10 backdrop-blur-[30px] btn2">
               <p
                 class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white ">
                 with our</p>
@@ -230,7 +230,7 @@
               </p>
             </div>
           </div>
-          <a class="absolute top-[4%] right-[12%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
+          <a class="absolute top-[4%] right-[12%] icons" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 82 82" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="17.6707" width="66" height="66" rx="33" transform="rotate(15.5296 17.6707 0)" fill="#FFCA4C" />
               <path
@@ -243,7 +243,7 @@
                 stroke="#8F5E00" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class=" absolute top-[25%] right-[7%] z-10" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
+          <a class=" absolute top-[25%] right-[7%] z-10 icons" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect y="2.61902" width="66" height="66" rx="33" transform="rotate(-2.2742 0 2.61902)" fill="#6ACD7A" />
               <path
@@ -257,7 +257,7 @@
                 stroke="#005F26" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class=" absolute top-[30%] left-[7%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
+          <a class=" absolute top-[30%] left-[7%] icons" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 78 78" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="12.2637" width="66" height="66" rx="33" transform="rotate(10.7085 12.2637 0)" fill="#FDEBEB" />
               <path
@@ -267,8 +267,8 @@
                 d="M53.8625 37.5618C53.4113 36.8678 52.9442 36.1523 52.8256 35.5784C52.715 35.0524 52.8559 34.2418 52.9921 33.4565C53.245 31.9966 53.533 30.3426 52.603 28.9788C51.673 27.615 50.028 27.2792 48.5766 26.9816C47.7959 26.8216 46.9898 26.6568 46.5404 26.3617C46.0509 26.0421 45.5539 25.3456 45.0726 24.6723C44.2305 23.4888 43.2731 22.1477 41.716 21.8532C40.159 21.5588 38.7794 22.458 37.5618 23.2519C36.8679 23.7031 36.1524 24.1702 35.5785 24.2888C35.0554 24.3999 34.2418 24.2584 33.4566 24.1223C31.9967 23.8694 30.3427 23.5813 28.9789 24.5113C27.6151 25.4414 27.2867 27.0878 26.9816 28.5378C26.8216 29.3185 26.6568 30.1246 26.3618 30.5739C26.0421 31.0634 25.3457 31.5604 24.6723 32.0417C23.4889 32.8838 22.1477 33.8413 21.8533 35.3983C21.5588 36.9554 22.458 38.335 23.252 39.5526C23.7031 40.2465 24.1703 40.962 24.2888 41.5359C24.3994 42.062 24.2585 42.8726 24.1223 43.6578C23.8695 45.1177 23.5814 46.7717 24.5114 48.1355C25.4414 49.4993 27.0864 49.8351 28.5378 50.1327C29.3186 50.2927 30.1247 50.4575 30.574 50.7526C31.0635 51.0722 31.5605 51.7687 32.0418 52.4421C32.8839 53.6255 33.8413 54.9667 35.3984 55.2611C36.9554 55.5556 38.335 54.6563 39.5526 53.8624C40.2465 53.4113 40.9621 52.9441 41.536 52.8256C42.062 52.715 42.8726 52.8559 43.6579 52.992C45.1177 53.2449 46.7718 53.533 48.1356 52.603C49.4993 51.673 49.8351 50.028 50.1328 48.5766C50.2928 47.7958 50.4576 46.9897 50.7526 46.5404C51.0723 46.0509 51.7687 45.5539 52.4421 45.0726C53.6255 44.2305 54.9667 43.273 55.2612 41.716C55.5556 40.1589 54.6564 38.7793 53.8625 37.5618ZM51.0317 43.0958C50.1763 43.7064 49.2908 44.3376 48.7194 45.2105C48.1715 46.0492 47.9586 47.0856 47.7533 48.0895C47.5409 49.1307 47.3178 50.2208 46.7665 50.5954C46.2153 50.97 45.1261 50.7826 44.0733 50.599C43.0638 50.4235 42.0212 50.2433 41.0403 50.4471C40.0191 50.6603 39.1082 51.2542 38.2273 51.8276C37.3465 52.401 36.4462 52.9876 35.8497 52.8748C35.2531 52.762 34.6238 51.883 34.0185 51.0317C33.4133 50.1804 32.7768 49.2907 31.9039 48.7194C31.0652 48.1715 30.0288 47.9585 29.0249 47.7532C27.9837 47.5409 26.8936 47.3177 26.519 46.7665C26.1443 46.2152 26.3318 45.1261 26.5154 44.0733C26.6909 43.0638 26.871 42.0211 26.6672 41.0403C26.4541 40.0191 25.8602 39.1081 25.2868 38.2273C24.7134 37.3465 24.1267 36.4462 24.2395 35.8496C24.3524 35.253 25.2314 34.6237 26.0827 34.0185C26.934 33.4133 27.8237 32.7767 28.395 31.9038C28.9429 31.0651 29.1559 30.0287 29.3612 29.0248C29.5735 27.9836 29.7966 26.8935 30.3479 26.5189C30.8992 26.1443 31.9883 26.3317 33.0411 26.5153C34.0506 26.6908 35.0932 26.871 36.0741 26.6672C37.0953 26.454 38.0063 25.8601 38.8871 25.2867C39.7679 24.7134 40.6682 24.1267 41.2648 24.2395C41.8613 24.3523 42.4907 25.2313 43.0959 26.0826C43.7011 26.9339 44.3377 27.8236 45.2105 28.3949C46.0492 28.9428 47.0857 29.1558 48.0896 29.3611C49.1307 29.5734 50.2208 29.7966 50.5955 30.3478C50.9701 30.8991 50.7827 31.9883 50.599 33.041C50.4236 34.0506 50.2434 35.0932 50.4472 36.074C50.6603 37.0953 51.2543 38.0062 51.8276 38.887C52.401 39.7678 52.9877 40.6682 52.8749 41.2647C52.7621 41.8613 51.883 42.4906 51.0317 43.0958ZM46.2036 35.4214C46.2936 35.5532 46.3567 35.7014 46.3893 35.8576C46.422 36.0138 46.4235 36.1749 46.3939 36.3317C46.3642 36.4885 46.304 36.6379 46.2165 36.7714C46.1291 36.9049 46.0162 37.0198 45.8843 37.1097L35.9529 43.8822C35.8211 43.9722 35.6729 44.0353 35.5167 44.068C35.3605 44.1006 35.1994 44.1022 35.0426 44.0725C34.8858 44.0429 34.7364 43.9826 34.6029 43.8952C34.4694 43.8078 34.3545 43.6949 34.2646 43.563L31.3621 39.3067C31.1806 39.0404 31.1122 38.713 31.1721 38.3964C31.232 38.0798 31.4152 37.7999 31.6814 37.6184C31.9476 37.4368 32.275 37.3685 32.5916 37.4284C32.9083 37.4882 33.1881 37.6714 33.3697 37.9376L35.5874 41.1917L44.5153 35.1021C44.6471 35.0121 44.7953 34.949 44.9515 34.9164C45.1077 34.8837 45.2688 34.8822 45.4256 34.9118C45.5824 34.9415 45.7318 35.0017 45.8653 35.0892C45.9988 35.1766 46.1137 35.2895 46.2036 35.4214Z"
                 fill="#94100C" />
             </svg>
-          </a>
-          <a class=" absolute top-[47%] left-[18%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
+          </a> 
+          <a class=" absolute top-[47%] left-[18%] icons" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect y="7.49695" width="66" height="66" rx="33" transform="rotate(-6.52231 0 7.49695)" fill="#6DC8D9" />
               <path
@@ -279,7 +279,7 @@
                 stroke="#00434F" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class="absolute bottom-[7%] right-[5%]" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
+          <a class="absolute bottom-[7%] right-[11%] icons" href=""><svg class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]"
               viewBox="0 0 81 81" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="16.1962" width="66" height="66" rx="33" transform="rotate(14.2052 16.1962 0)" fill="#E5F6EC" />
               <path
@@ -290,7 +290,7 @@
                 stroke="#00434F" stroke-width="2.5" stroke-linecap="round" />
             </svg>
           </a>
-          <a class="absolute right-0 bottom-[30%]" href=""><svg class="w-[75px] lg:w-[161px] h-[165px] max-sm:h-[90px]"
+          <a class="absolute right-0 bottom-[30%] icons" href=""><svg class="w-[75px] lg:w-[161px] h-[165px] max-sm:h-[90px]"
               viewBox="0 0 161 165" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_295_51)">
                 <rect width="443" height="165" rx="82.5" fill="#F78682" />
@@ -415,6 +415,7 @@
     gsap.from(".btn1", { opacity: 0, y: -100, duration: 1, delay: 2.5, stagger: 0.2, ease: "bounce.out" });
     gsap.from(".btn2", { opacity: 0, x: 100, duration: 1, delay: 3, stagger: 0.2, ease: "bounce.out" });
     gsap.from(".btn3", { opacity: 0, y: 100, duration: 1, delay: 3.5, stagger: 0.2, ease: "bounce.out" });
+    gsap.from(".icons", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 2 });
     gsap.from(".bg-lightgreen", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 0.2 });
     gsap.from(".bg-lightgreen", { duration: 2, delay: 2, ease: "bounce.in" });
     gsap.from(".bg-skyblue1", { duration: 3, delay: 3, ease: "bounce.in" });
