--- a/index.html
+++ b/index.html
@@ -105,23 +105,17 @@
             </span>
             <div class=" hidden md:block">
               <div class=" hidden md:block ps-[43px] pt-24 text">
-                <button
-                  class="p-[7px_19px_10px_30px] btn hover:bg-white justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkGreen border text-darkGreen hover:border-darkGreen border-transperent uppercase bg-yellow rounded-[30px] text-darkGreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[16px] sm:leading-[20px] leading-[10px]">
-                  <span class="pe-1"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
-                      <path
-                        d="M11.5433 18.9147C11.7955 19.1669 12.2045 19.1669 12.4567 18.9147L16.5665 14.8048C16.8187 14.5526 16.8187 14.1437 16.5665 13.8915C16.3143 13.6393 15.9054 13.6393 15.6532 13.8915L12 17.5448L8.34677 13.8915C8.09456 13.6393 7.68566 13.6393 7.43346 13.8915C7.18125 14.1437 7.18125 14.5526 7.43346 14.8048L11.5433 18.9147ZM11.3542 5.54193L11.3542 18.4581L12.6458 18.4581L12.6458 5.54193L11.3542 5.54193Z"
-                        fill="#FFCA4C" />
-                    </svg>
-                  </span>
-                  <span class=" absolute duration-300 w-[85%] btn-one top-[45%] left-[0] translate-y-[-50%] ff-phudu text-[20px]  font-semibold leading-[20px] text-darkGreen ">
-                    subscribe for more
-                  </span>
-                  <span class="absolute duration-300 btn-two w-[85%] top-[145%] left-[0] translate-y-[-50%] ff-phudu text-[20px]  font-semibold leading-[20px] text-darkGreen ">
-                    subscribe for more
-                  </span>
-                </button>
+                <a href="#morebtn"
+                class="ff-phudu w-[267px] h-[44px] flex justify-center border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey font-semibold text-[20px] leading-[20px] text-darkgreen text flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow">
+                subscribe for more
+                <span><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
+                    <path
+                      d="M11.5433 18.9147C11.7955 19.1669 12.2045 19.1669 12.4567 18.9147L16.5665 14.8048C16.8187 14.5526 16.8187 14.1437 16.5665 13.8915C16.3143 13.6393 15.9054 13.6393 15.6532 13.8915L12 17.5448L8.34677 13.8915C8.09456 13.6393 7.68566 13.6393 7.43346 13.8915C7.18125 14.1437 7.18125 14.5526 7.43346 14.8048L11.5433 18.9147ZM11.3542 5.54193L11.3542 18.4581L12.6458 18.4581L12.6458 5.54193L11.3542 5.54193Z"
+                      fill="#FFCA4C" />
+                  </svg>
+                </span>
+              </a>
               </div>
             </div>
           </div>
@@ -144,7 +138,7 @@
           of your sales rep's time, by automating mundane tasks.
         </p>
         <div class="md:hidden mt-[32px]">
-          <button
+          <a href="#morebtn"
             class="ff-phudu w-[267px] h-[44px] flex justify-center border border-transparent duration-300 hover:scale-95 hover:shadow-xl hover:bg-transparent hover:border hover:border-solid hover:border-grey font-semibold text-[20px] leading-[20px] text-darkgreen text flex items-center gap-3 py-[10px] px-[20px] rounded-[30px] bg-yellow">
             subscribe for more
             <span><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -154,13 +148,13 @@
                   fill="#FFCA4C" />
               </svg>
             </span>
-          </button>
+          </a>
         </div>
       </div>
     </div>
   </div>
   <!-- input validation section  -->
-  <section class="mb-[32px]">
+  <section id="morebtn" class="mb-[32px]">
     <div class="px-3 sm:px-[32px] max-w-[1440px] mx-auto">
       <div class=" grid lg:grid-cols-2 gap-6">
         <div
